throw out jigsaw, jacoco and eclipse plugins